Fix table styling in tabs
Tables in tabs are too narrow, so the hover effect doesn't look good.
This makes them full width.

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -36,3 +36,24 @@ $color_app-pale-blue: #ccdff1;
 .nhsuk-visually-hidden {
   @extend .nhsuk-u-visually-hidden;
 }
+
+// Tables in tabs are too narrow, so the hover effect doesn't look good.
+// This makes them full width.
+.govuk-tabs {
+  .nhsuk-table {
+    margin-left: -20px;
+    width: calc(100% + 40px);
+
+    tr {
+      th:first-child,
+      td:first-child {
+        padding-left: 20px;
+      }
+
+      th:last-child,
+      td:last-child {
+        padding-right: 20px;
+      }
+    }
+  }
+}
